# lectures

./: .gitignore
01-flow1-200901/: plan.md
03-flow1-200915/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  18.cpp  19.cpp  20.cpp
04-flow1-200929/01-classes/: 01-operators.cpp  02-fields.cpp  02b-fields.cpp  02c-fields.cpp  02d-fields.cpp  02e-fields.cpp  03-getters.cpp  04-attributes.cpp  05-type-aliases.cpp  06-static.cpp
04-flow1-200929/02-conversion/: 01-implicit.cpp  02-explicit.cpp  03a-details.cpp  03b-details.cpp
04-flow2-201001/: 01-operators.cpp  02a-fields.cpp  02b-fields.cpp  02c-fields.cpp  02d-fields.cpp  03-getters.cpp  04-attributes.cpp  05-type-aliases.cpp
06-flow1-201013/03-combo/: 02-wtf.cpp  (+3 more)
07-201103/: links.md
09-201117/: TODO.md
09-201117/02-cmake/: CMakeLists.txt  README.md  main.cpp  print_hello_1.cpp  print_hello_2.cpp
11-201201/: 01-refs.cpp  02-move.cpp  03-copy-elision.cpp  04-move-ctor.cpp  04b-push.cpp  05-return-move.cpp
13-210112/: TODO.md
14-210119/: 01-basic.cpp  03-casts.cpp  10-bad.cpp  11-polymorph-oops.cpp  12-virtual.cpp  13-ptrs-bad.cpp  14-ptrs-good.cpp  vptr.tif
15-210126/: TODO.md
28-210520/: presentation.html  presentation.md
29-210527/: presentation.html  presentation.md  remark.js
30-210603/: presentation.html  presentation.md
next/: never.md  next.md
questions-a/: README.md
questions-a-201220/: 06-extra-qs-example.cpp  07-call-braces.cpp  08-structured-binding.cpp  09-guaranteed-copy-elision.cpp
questions-b/: README.md
(+419 files in other folders)
